test/extern/ferguson/initeq-extern-record.good
initeq-extern-record.chpl:4: error: init= may not currently be defined on extern types
