test/extern/ferguson/initeq-extern-record.chpl
extern record myExternRecord {
}

proc myExternRecord.init=(other: myExternRecord) {
}
